# pybaum

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGES.rst  LICENSE  README.md  README.rst  environment.yml  pyproject.toml  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: enhancement.md
.github/workflows/: continuous-integration-workflow.yml  main.yml
docs/: environment.yml  rtd_environment.yml
docs/source/: api.rst  conf.py  index.rst
src/pybaum/: __init__.py  config.py  equality.py  registry.py  registry_entries.py  tree_util.py  typecheck.py
tests/: test_tree_util.py  test_typecheck.py  test_with_jax.py
